--- a/src/contents/css/Data.css
+++ b/src/contents/css/Data.css
@@ -1,11 +1,29 @@
 .data-container {
+    padding: 20px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
 }
 
+.data-container h1 {
+  font-size: 2.5em;
+  margin-bottom: 1rem;
+}
+
 .mb-4 {
     margin-bottom: 1rem;
+}
+
+.home-container {
+    padding: 20px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.home-container h1 {
+  font-size: 2.5em;
+  margin-bottom: 1rem;
 }
 
 .dropdown {
@@ -24,4 +42,19 @@ select:focus {
     outline: none;
     border-color: #4a90e2;
     box-shadow: 0 0 5px rgba(74, 144, 226, 0.5);
+}
+
+.line-container {
+  padding: 20px;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.line-container h1 {
+  font-size: 2.5em;
+  margin-bottom: 1rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
 }
